--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
-</head>
-<body>
-    <h1>Test HTML</h1>    
-</body>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
+    <main class="p-16 flex flex-col justify-center items-center gap-8">
+      <h1 class="text-4xl font-semibold">Registrar Estudiante</h1>
+      <form id="form" class="flex flex-col gap-4 items-center">
+        <div class="flex w-96 gap-4 justify-between items-center font-semibold">
+          <label for="id">ID</label>
+          <input type="text" class="p-2 border-2 border-black rounded-md" name="id" required placeholder="Identificador"/>
+        </div>
+        <div class="flex w-96 gap-4 justify-between items-center font-semibold">
+          <label for="name">Nombre</label>
+          <input type="text" class="p-2 border-2 border-black rounded-md" name="name" required placeholder="Nombre"/>
+        </div>
+        <div class="flex w-96 gap-4 justify-between items-center font-semibold">
+          <label for="direction">Dirección</label>
+          <input type="text" class="p-2 border-2 border-black rounded-md" name="direction" required placeholder="Dirección"/>
+        </div>
+        <div class="flex w-96 gap-4 justify-between items-center font-semibold">
+          <label for="phone">Teléfono</label>
+          <input type="phone" class="p-2 border-2 border-black rounded-md" name="phone" required placeholder="Teléfono"/>
+        </div>
+        <button class="py-2 px-8 w-[fit-content] bg-gray-100 border-2 border-black rounded-md" type="button" onclick="handleSubmit()">
+            Registrar
+        </button>
+      </form>
+      <div class="w-full h-[0.10rem] bg-gray-500">
+      </div>
+      <h1 class="text-4xl font-semibold">Lista de Estudiantes</h1>
+      <table class="table-fixed border border-black rounded-full">
+        <thead>
+          <tr class="bg-gray-100">
+            <th class="p-4 border border-slate-600 w-20">ID</th>
+            <th class="p-4 border border-slate-600 w-40">Nombre</th>
+            <th class="p-4 border border-slate-600 w-48">Dirección</th>
+            <th class="p-4 border border-slate-600 w-32">Teléfono</th>
+          </tr>
+        </thead>
+        <tbody id="table-content">
+        </tbody>
+      </table>
+    </main>
+    <script src="./index.js"></script>
+    <script>
+        updateStudents()
+    </script>
+  </body>
 </html>
